# astra-sim

./: .gitignore  .gitmodules  ALL_REDUCE_MANY_30.0.et  ALL_REDUCE_MANY_30.1.et  CMakeLists.txt  Dockerfile  analytical_congestion_aware_run.sh  analytical_congestion_unaware_run.sh  analytical_run.sh  eval.py  eval_loop_16nodes.py  eval_loop_4nodes.py  gdb_intercept.sh  gdb_run.sh  intercept_run.sh  lambda_run.sh  many_run.sh  mpi_perf_run.sh  mpi_run.sh  run.sh  sbatch_4nodes.sh  sbatch_loop_4nodes.sh  sbatch_openmpi.sh  sbatch_run.sh
astra-sim/common/: AstraNetworkAPI.hh  ChromeTracer.cc  ChromeTracer.hh  Logging.cc  Logging.hh
astra-sim/network_frontend/analytical/common/: CommonNetworkApi.cc
astra-sim/network_frontend/analytical/congestion_unaware/: CongestionUnawareNetworkApi.cc
astra-sim/network_frontend/genie/: CMakeLists.txt  README.md  USER_GUIDE.md  args.cc  args.hh  main.cc
astra-sim/network_frontend/genie/genie_network/: event.cc  event.hh  event_queue.cc  event_queue.hh  genie_network.cc  genie_network.hh  qp_manager.cc  qp_manager.hh  thread_counter.cc  thread_counter.hh  time_keeper.cc  time_keeper.hh
astra-sim/network_frontend/gent/: CMakeLists.txt  README.md  README_eval.md  main.cc  redis.conf
astra-sim/network_frontend/gent/gent_network/: gent_network.cc  gent_network.hh  qp_pooler.cc  qp_pooler.hh  thread_pooler.hh  time_keeper.cc  time_keeper.hh
astra-sim/network_frontend/ns3/: AstraSimNetwork.cc  entry.h
astra-sim/system/: AstraNetworkAPI.hh  CallData.hh  CommunicatorGroup.hh  PacketBundle.cc  Sys.cc  Sys.hh  WorkloadLayerHandlerData.hh
astra-sim/system/astraccl/custom_collectives/: CollectiveParser.cc
astra-sim/system/collective/: Ring.cc  Ring.hh
astra-sim/workload/: HardwareResource.cc  HardwareResource.hh  Workload.cc  Workload.hh
examples/comm_group/: pernode_8npus_commgroup.json
examples/genie/: analytical_network.yml  analytical_network_8ranks.yml  mpi_run.sh  system.json  system_2chunk.json
examples/genie/workload/: ALL_GATHER.0.et  ALL_GATHER.1.et  ALL_GATHER.3.et
examples/gent/: system.json  system_split.json
examples/gent/workload/: ALL_GATHER.2.et  ALL_REDUCE.0.et  ALL_REDUCE.1.et  ALL_REDUCE.2.et  ALL_REDUCE.3.et  one_comp_node.0.et  one_comp_node.1.et  one_comp_node.2.et  one_comp_node.3.et
examples/gent/workload/microbenchmark/: ALL_GATHER_17.0.et  ALL_GATHER_17.1.et  ALL_GATHER_17.10.et  ALL_GATHER_17.11.et  ALL_GATHER_17.12.et  ALL_GATHER_17.13.et  ALL_GATHER_17.14.et  ALL_GATHER_17.15.et  ALL_GATHER_17.2.et  ALL_GATHER_17.3.et  ALL_GATHER_17.4.et  ALL_GATHER_17.5.et  ALL_GATHER_17.6.et  ALL_GATHER_17.7.et  ALL_GATHER_17.8.et  ALL_GATHER_17.9.et  ALL_GATHER_18.0.et  ALL_GATHER_18.1.et  ALL_GATHER_18.10.et  ALL_GATHER_18.11.et  ALL_GATHER_18.12.et  ALL_GATHER_18.13.et  ALL_GATHER_18.14.et  ALL_GATHER_18.15.et  ALL_GATHER_18.2.et  ALL_GATHER_18.3.et  ALL_GATHER_18.4.et  ALL_GATHER_18.5.et  ALL_GATHER_18.6.et  ALL_GATHER_18.7.et  ALL_GATHER_18.8.et  ALL_GATHER_18.9.et  ALL_GATHER_19.0.et  ALL_GATHER_19.1.et  ALL_GATHER_19.10.et  ALL_GATHER_19.11.et  ALL_GATHER_19.12.et  ALL_GATHER_19.13.et  ALL_GATHER_19.14.et  ALL_GATHER_19.15.et  (+408 more)
examples/network/analytical/: Ring_Switch_8npus.yml
examples/network_analytical/: system.json
examples/run_scripts/analytical/congestion_unaware/: pernode_validate.sh
examples/system/custom_collectives/: pernode_with_global.json
examples/workload/: generator.py  pernode_validate.0.et  pernode_validate.1.et  pernode_validate.2.et  pernode_validate.3.et  pernode_validate.4.et  pernode_validate.5.et  pernode_validate.6.et  pernode_validate.7.et
